<resources>
    <string name="app_name">LocaFI</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="scan_wi_fi">Scan Wi-Fi</string>
    <string name="manage_wi_fi">Manage Wi-Fi</string>
    <string name="signal_strength">Signal Strength:</string>
    <string name="distance">Distance:</string>
    <string name="location">Location:</string>

    <string name="add_to_calculation">Add to Calculation</string>
    <string name="selected_wi_fi_details">Selected Wi-Fi Details</string>
    <string name="scan_again">Scan Again</string>
    <string name="available_wi_fi_networks">Available Wi-Fi Networks</string>
    <string name="app_logo">App Logo</string>

    <!-- Main Screen Text -->
    <string name="wifi_scan_title">WiFi Network Scanner</string>
    <string name="wifi_scan_description">Discover and visualize nearby WiFi networks</string>
    <string name="Scan_Page">WiFi Device Scan Page</string>
    <string name="manage_networks">Manage Networks</string>
    <string name="start_scanning_to_see_nearby_networks">Start scanning to see nearby networks</string>
    <string name="wifi_network_visualization">WiFi Network Visualization</string>
    <string name="press_scan_to_discover_networks">Scanning is in progress, please wait patiently.</string>
    <string name="no_networks_found">No Networks Found</string>
    <string name="center_on_wifi_location">LocaFI Me</string>
    <string name="your_exact_gps_location">Get My GPS Location</string>

    <string name="show_real_location">Show Real Location</string>
    <string name="hide_comparison">Hide Comparison</string>
    <string name="accuracy_warning">Waiting for better GPS accuracy</string>
    <string name="enable_location_services">Enable Location Services</string>

    <string name="show_gps_location">Show GPS Location</string>
    <string name="hide_gps_location">Hide GPS Location</string>
    <string name="start_wifi_scan">START SCAN</string>
    <string name="stop_wifi_scan">STOP SCAN</string>
    <string name="view_scanned_list">show wifi list</string>
    <string name="wifi_name_label">WIFI</string>
    <string name="latitude_label">" "</string>
    <string name="longitude_label">" "</string>
    <string name="location_label">UnKnown</string>
    <string name="signal_strength_label">" "</string>
    <string name="enter_main_screen">YOUR WIFI LOCATION</string>
    <string name="select_action">WELLCOME</string>
    <string name="clear_all_data">Clear All Data</string>

</resources>