<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.WifiManagement">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/wifi_manage_ABL_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_MTB_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/secondary_color"
            android:elevation="@dimen/elevation"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/main_IMG_logo"
                    android:layout_width="@dimen/logo_size"
                    android:layout_height="@dimen/logo_size"
                    android:src="@mipmap/logo"
                    android:layout_marginEnd="@dimen/padding"
                    android:contentDescription="@string/app_logo" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_MTV_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/wifi_manage_ABL_appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_m">

            <!-- Available Wi-Fi Points -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wifi_manage_MCV_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondary_color"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_m">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/wifi_manage_MTV_availableTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s"
                        android:text="@string/available_wi_fi_networks"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/text_color" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/wifi_manage_RCV_available"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:minHeight="@dimen/height" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/wifi_manage_BTN_scan"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_s"
                        android:backgroundTint="@color/secondary_background"
                        android:text="@string/scan_again"
                        android:textColor="@color/secondary_color" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <!-- Selected Wi-Fi Details -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wifi_manage_MCV_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/secondary_background"
                    android:padding="@dimen/margin_m">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/wifi_manage_MTV_selectedTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_wi_fi_details"
                        android:textColor="@color/secondary_color"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:layout_marginBottom="@dimen/margin_m" />

                    <!-- Wi-Fi Name -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/wifi_manage_MTV_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_marginBottom="@dimen/margin_s" />

                    <!-- Signal Strength -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/wifi_manage_MTV_strength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:layout_marginBottom="@dimen/margin_s" />

                    <!-- Calculated Distance -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/wifi_manage_MTV_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:layout_marginBottom="@dimen/margin_m" />

                    <!-- Add Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/wifi_manage_BTN_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_color"
                        android:textColor="@color/secondary_color"
                        android:textSize="16sp"
                        android:text="@string/add_to_calculation" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <!-- Loading Progress -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/wifi_manage_PGI_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorSize="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>